add getpartnerbecause swagger delete this function
